--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-firebase/auth": "^19.2.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.14",
     "expo-av": "~13.10.6",
+    "expo-image-picker": "^15.0.4",
+    "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.1",
     "react": "18.2.0",
@@ -24,7 +27,8 @@
     "react-native-video": "^5.2.1",
     "react-redux": "^9.1.1",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
