--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-vector-icons": "^10.0.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^5.2.1",
     "react-redux": "^9.1.1",
     "redux": "^5.0.1",
